<resources>
    <string name="app_name">CST2335 FinalProject</string>
    <string name="app_title">CST2335 Final Project</string>
    <string name="aviationTitle">Aviation Tracking</string>
    <string name="quizTitle">Trivia Questions</string>
    <string name="currencyTitle">Currency Converter</string>
    <string name="bearTitle">Bear Generator</string>
    <string name="contact">Contact Us</string>
    <string name="about">About Us</string>
    <string name="currencyInput">Currency</string>
    <string name="currencyAmount">Amount</string>
    <string name="help">Need Help?</string>

    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="geography">Geography</string>
    <string name="sports">Sports</string>
    <string name="textQuestionAmount">The number of questions</string>
    <string name="textCategory">Please select a question topic</string>
    <string name="total_question">Total Questions</string>
    <string name="help_trivia">1. Input the numbers you want to answer;
        2. Start to choose the answer for each question and submit;
        3. After you finish all question you can see the score this time. </string>



    <string name="width">Weight</string>
    <string name="height">Height</string>
    <string name="help_bear">1. Enter Width and Height. 2.Press generate button. 3. Get your bear image.  Note: Only enter positive value</string>
    <string name="pressme">Generate a Bear</string>
    <string name="delete">Do you want to delete image  </string>
    <string name="Question">Alter! </string>
    <string name="generated"> A bear has generated with </string>
    <string name="askgenerated"> Do you want to generate a bear with  </string>
    <string name="checkvalue"> Please enter positive value  </string>
    <string name="welcomebear"> Welcome to Bear Generator! </string>




    <!-- Strings for Currency Converter -->
    <string name="currencySave">Save</string>
    <string name="currencyShowTransaction">Show</string>
    <string name="successfulSave">Record Saved</string>
    <string name="inputCorrectCurFrom">Please input a correct currency</string>
    <string name="inputCorrectCurTo">Please input a correct target currency</string>
    <string name="alertHeader">Question:</string>
    <string name="alertQuestion">View or Delete this message?</string>
    <string name="alertView">View</string>
    <string name="alertDelete">Delete</string>
    <string name="deleteMsgNotice">You deleted transaction #</string>
    <string name="deleteMsgUndo">Undo</string>


    <!-- Strings for Aviation -->
    <string name="help_flight">Enter the airport code , then press search button</string>
    <string name="flight_hint">Enter airport code</string>
    <string name="search_button">Search</string>
    <string name="show_button">Show the lists</string>
    <string name="saveButton">Save</string>
    <string name="deleteButton">Delete</string>
    <string name="flightNumber">Flight Number:</string>
    <string name="departureAirport">Departure Airport:</string>
    <string name="destinationAirport">Destination Airport:</string>



    <!-- Strings for Menu Bar -->
    <string name="help_navi">Page Navigation</string>
    <string name="change_page">Stay or Go</string>
    <string name="change_page_decision">Change Page?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="current_page">You are at the current page</string>
    <string name="contact_msg">Mail Us to Address: 1234 Woodroffe Ave</string>
    <string name="about_msg">4 Modules Android App</string>


    <string name="help_main">Click any module you need; Can change to other page by clicking top right help bar</string>
    <string name="help_currency">1. Input Currency Code be converted from in top left field; 2. Input Currency Code be converted to in the next left field; 3. Input the amount you want to convert in the original currency in top right field; 4. Click the CONVERT button in the center to get the amount in target currency</string>
    <string name="generate_bear">First button</string>
    <string name="enter_width">Enter Width</string>
    <string name="enter_height">Enter Height</string>
</resources>
