<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/help"
        android:icon="@drawable/help_menu"
        android:title="@string/help"
        app:showAsAction="always"/>
    <item
        android:id="@+id/aviation"
        android:icon="@drawable/airplane_menu"
        android:title="@string/aviationTitle"
        app:showAsAction="never" />
    <item
        android:id="@+id/quiz"
        android:icon="@drawable/quiz_menu"
        android:title="@string/quizTitle"
        app:showAsAction="never"/>
    <item
        android:id="@+id/currency"
        android:icon="@drawable/currency_menu"
        android:title="@string/currencyTitle"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bear"
        android:icon="@drawable/bear_menu"
        android:title="@string/bearTitle"
        app:showAsAction="never"/>
    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>