<!-- item_flight.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewFlightNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flightNumber"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textViewDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departureAirport"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/textViewDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destinationAirport"
        android:textSize="14sp"/>


</LinearLayout>
